@@ -1,5 +1,7 @@
 * NEXT
 - Add usage example to README.
+- Avoid throwing an error when a character has no glyph in the current
+  font.
 
 * 1.0.0 [2025-02-15 Sat]
 - MELPA release.
